# MACESW

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  STYLE_GUIDE.md
.github/: copilot-instructions.md
.github/workflows/: build-with-clang.yml  build-with-gcc.yml  regression-test-with-clang.yml  regression-test-with-gcc.yml  static-code-analysis.yml
cmake/: GlobalCompileConfig.cmake  LookForGenFit.cmake  LookForMACEOfflineData.cmake  LookForMACETestData.cmake  LookForMustard.cmake  LookForPMP.cmake  LookForSomething.cmake.template  MACESWClangFormat.cmake  MACESWClangTidy.cmake  MACESWCompileConfig.cmake
src/app/reconstruction/MACE/SmearMACE/: CLI.c++  CLI.h++  CMakeLists.txt  SmearMACE.c++  Smearer.c++  Smearer.h++  Smearer.inl
src/app/simulation/MACE/PhaseI/SimMACEPhaseI/: Analysis.c++  Analysis.h++  CMakeLists.txt  DefaultMacro.h++  RunManager.h++
src/app/simulation/MACE/PhaseI/SimMACEPhaseI/Action/: DetectorConstruction.c++  DetectorConstruction.h++  TrackingAction.h++
src/app/simulation/MACE/PhaseI/SimMACEPhaseI/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/MACE/PhaseI/SimMACEPhaseI/SD/: MRPCSD.c++  MRPCSD.h++  MRPCSDMessenger.h++
src/app/simulation/MACE/SimDose/: Analysis.c++  Analysis.h++  CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimDose/Action/: DetectorConstruction.c++  DetectorConstruction.h++
src/app/simulation/MACE/SimDose/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++
src/app/simulation/MACE/SimECAL/: Analysis.c++  CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimECAL/Action/: DetectorConstruction.h++  TrackingAction.h++
src/app/simulation/MACE/SimECAL/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/MACE/SimMACE/: Analysis.c++  CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimMACE/Action/: DetectorConstruction.c++  DetectorConstruction.h++  TrackingAction.h++
src/app/simulation/MACE/SimMACE/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++  PhysicsMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/MACE/SimMACE/scripts/: SimMACE.yaml
src/app/simulation/MACE/SimMMS/: Analysis.c++  CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimMMS/Action/: TrackingAction.h++
src/app/simulation/MACE/SimMMS/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/MACE/SimMMS/scripts/: SimMMS.yaml
src/app/simulation/MACE/SimPTS/: CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimPTS/Action/: DetectorConstruction.c++  TrackingAction.h++
src/app/simulation/MACE/SimPTS/Detector/Description/: VirtualDetectorA.h++  VirtualDetectorB.h++  VirtualDetectorC.h++  VirtualDetectorD.h++
src/app/simulation/MACE/SimPTS/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++
src/app/simulation/MACE/SimPTS/SD/: VirtualSD.h++
src/app/simulation/MACE/SimPTS/scripts/: SimPTS.yaml
src/app/simulation/MACE/SimTTC/: CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimTTC/Action/: TrackingAction.h++
src/app/simulation/MACE/SimTTC/Messenger/: AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/app/simulation/MACE/SimTarget/: Analysis.c++  CMakeLists.txt  RunManager.h++
src/app/simulation/MACE/SimTarget/Action/: DetectorConstruction.h++  PrimaryGeneratorAction.c++  TrackingAction.h++
src/app/simulation/MACE/SimTarget/Messenger/: ActionMessenger.h++  AnalysisMessenger.h++  DetectorMessenger.h++  PrimaryGeneratorActionMessenger.h++
src/lib/detector/: CMakeLists.txt
src/lib/detector/MACE/Detector/Assembly/: MMS.c++
src/lib/detector/MACE/Detector/Definition/: BeamDegrader.c++  BeamDegrader.h++  BeamMonitor.h++  CDCCell.c++  Collimator.c++  Collimator.h++  ECALCrystal.c++  ECALPhotoSensor.c++
src/lib/detector/MACE/Detector/Description/: Accelerator.h++  BeamDegrader.h++  BeamMonitor.h++  CDC.c++  CDC.h++  Collimator.h++  ECAL.c++  ECAL.h++  ECALField.h++  ECALMagnet.h++  ECALShield.h++  FieldOption.c++  FieldOption.h++  MCP.h++  MCPChamber.h++  MMSBeamPipe.h++  MMSField.h++  MMSMagnet.h++  MMSShield.h++  ShieldingWall.h++  Solenoid.h++  SolenoidBeamPipe.h++  SolenoidShield.h++  TTC.c++  TTC.h++  Target.h++  Vacuum.h++  World.h++
src/lib/detector/MACE/PhaseI/Detector/Definition/: SciFiTracker.c++  TTC.h++
src/lib/detector/MACE/PhaseI/Detector/Description/: CentralBeamPipe.h++  MRPC.h++  SciFiTracker.c++  SciFiTracker.h++  TTC.c++  TTC.h++  World.h++
src/lib/reconstruction/: CMakeLists.txt
src/lib/reconstruction/MACE/Reconstruction/MMSTracking/Field/: GenFitMMSField.c++  GenFitMMSField.h++
src/lib/reconstruction/MACE/Reconstruction/MMSTracking/Finder/: TruthFinder.h++  TruthFinder.inl
src/lib/reconstruction/MACE/Reconstruction/MMSTracking/Fitter/: GenFitDAFFitter.h++  GenFitDAFFitter.inl  GenFitReferenceKalmanFitter.h++  GenFitterBase.h++  GenFitterBase.inl
src/lib/simulation/: CMakeLists.txt
src/lib/simulation/MACE/PhaseI/Simulation/Hit/: SciFiSiPMHit.h++  SciFiSimHit.h++
src/lib/simulation/MACE/PhaseI/Simulation/SD/: SciFiSD.c++  SciFiSD.h++  SciFiSiPMSD.c++  SciFiSiPMSD.h++
src/lib/simulation/MACE/Simulation/Action/: NeutrinoKillerMessenger.h++  NeutrinoKillerMessenger.inl  NeutrinoKillerSteppingAction.h++  NeutrinoKillerSteppingAction.inl
src/lib/simulation/MACE/Simulation/Analysis/: MMSTruthTracker.c++  MMSTruthTrackerMessenger.h++
src/lib/simulation/MACE/Simulation/Messenger/: NumericMessenger.h++  NumericMessenger.inl
src/lib/simulation/MACE/Simulation/Physics/: StandardPhysicsList.h++  StandardPhysicsListMessenger.h++
src/lib/simulation/MACE/Simulation/SD/: CDCSD.c++  CDCSD.h++  CDCSDMessenger.h++  ECALPMSD.c++  ECALPMSD.h++  ECALSD.c++  ECALSD.h++  MCPSD.c++  MCPSD.h++  TTCSD.c++  TTCSD.h++  TTCSiPMSD.c++  TTCSiPMSD.h++
src/test/: CMakeLists.txt
src/test/scripts/: generate_regression_data.bash  regression_test.bash
tooling/: clang-tidy-amend-unity-build.yml  clang-tidy.in
(+26 files in other folders)
