file(GLOB SmearMACE_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SmearMACE_SCRIPTS})
    set(SmearMACE_SCRIPTS_COPY_DIR SmearMACE)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SmearMACE_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SmearMACE_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SmearMACE_SCRIPTS_COPY_DIR})
endforeach()
