file(GLOB SimDose_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimDose_SCRIPTS})
    set(SimDose_SCRIPTS_COPY_DIR SimDose)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimDose_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimDose_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimDose_SCRIPTS_COPY_DIR})
endforeach()
