file(GLOB SimECAL_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimECAL_SCRIPTS})
    set(SimECAL_SCRIPTS_COPY_DIR SimECAL)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimECAL_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimECAL_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimECAL_SCRIPTS_COPY_DIR})
endforeach()
