file(GLOB SimMACE_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimMACE_SCRIPTS})
    set(SimMACE_SCRIPTS_COPY_DIR SimMACE)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimMACE_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimMACE_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimMACE_SCRIPTS_COPY_DIR})
endforeach()
