file(GLOB SimMMS_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimMMS_SCRIPTS})
    set(SimMMS_SCRIPTS_COPY_DIR SimMMS)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimMMS_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimMMS_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimMMS_SCRIPTS_COPY_DIR})
endforeach()
