file(GLOB SimPTS_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimPTS_SCRIPTS})
    set(SimPTS_SCRIPTS_COPY_DIR SimPTS)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimPTS_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimPTS_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimPTS_SCRIPTS_COPY_DIR})
endforeach()
