file(GLOB SimTarget_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${SimTarget_SCRIPTS})
    set(SimTarget_SCRIPTS_COPY_DIR SimTarget)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${SimTarget_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${SimTarget_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${SimTarget_SCRIPTS_COPY_DIR})
endforeach()
