file(GLOB PhaseISimMACEPhaseI_SCRIPTS ${CMAKE_CURRENT_SOURCE_DIR}/scripts/*)
foreach(_scripts ${PhaseISimMACEPhaseI_SCRIPTS})
    set(PhaseISimMACEPhaseI_SCRIPTS_COPY_DIR PhaseI/SimMACEPhaseI)
    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${PhaseISimMACEPhaseI_SCRIPTS_COPY_DIR})
    configure_file(${_scripts} ${CMAKE_BINARY_DIR}/${PhaseISimMACEPhaseI_SCRIPTS_COPY_DIR} COPYONLY)
    install(FILES ${_scripts} DESTINATION ${MACESW_DATAROOTDIR}/${PhaseISimMACEPhaseI_SCRIPTS_COPY_DIR})
endforeach()
